--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ nav {
   width: 30%;
   height: 300px;
   background: #6FFFFF;
-  padding: 20p;
+  padding: 20px;
 }
 nav ul {
   list-style-type: none;
