--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,11 @@
   width: 90%;
   margin: 20px auto;
 }
-
 #img_cont a {
   display: table-cell;
   text-align: center;
   width: 25%;
 }
-
 #img_cont img {
   width: 100%;
   max-width: 150px;
@@ -23,7 +21,7 @@ body {
   background-color: #8FC1E3;
 }
 header {
-  background-color: #5085A5;
+  background-color: darkkhaki;
   padding: 5px;
   text-align: center;
   font-size: 35px;
@@ -34,7 +32,7 @@ nav {
   width: 30%;
   height: 300px;
   background: #6FFFFF;
-  padding: 20px;
+  padding: 20p;
 }
 nav ul {
   list-style-type: none;
@@ -45,25 +43,29 @@ article {
   padding: 20px;
   width: 70%;
   background-color: #687864;
-  height: 300px; 
+  height: 300px;
+  font-size: 22px;
 }
-section: after {
-  content: "";
+section: :after {
+  color: darkslateblue;
+    content: "";
   display: table;
   clear: both;
+  font-size: 10px;
 }
 footer {
   background-color: #8FC1E3;
   padding: 10px;
   text-align: center;
   color: #000000;
+    font-size: 10px;
 }
-@media (max-width: 600px) {
+@media (max-width: 600px) 
   nav, article {
     width: 100%;
     height: 100%;
   }
-}
+
 
 
 
