--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ nav {
   width: 30%;
   height: 300px;
   background: #6FFFFF;
-  padding: 20p;
+  padding: 20px;
 }
 nav ul {
   list-style-type: none;
@@ -46,7 +46,7 @@ article {
   height: 300px;
   font-size: 22px;
 }
-section: :after {
+section::after {
   color: darkslateblue;
     content: "";
   display: table;
