--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ page-title {
 .hero {
   padding: 4em;
   max-width: 100%;
-background-color: lightgoldenrodyellow;  
+background-color: #5F6366;  
   color: black;
 }
 
